--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^0.20.0",
     "css-loader": "^0.15.6",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "jsdom": "^8.0.4",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
